--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          VITE_BASE: "binary"
+          VITE_BASE: "/"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
