Revert "chore: update VITE_BASE path in GitHub Actions and Vite config"
This reverts commit be7c93267d0f07ed5881e957b53c6c09861bb396.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          VITE_BASE: "/"
+          VITE_BASE: "binary"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
