feat: add Prettier for code formatting and update package.json
feat: add binary image asset for BinaryRain component

style: refactor App.css for consistent formatting and improved readability

refactor: update App component to use Home page

refactor: modify BinaryRain component for improved readability and structure

feat: create style constants for better maintainability

refactor: enhance useBinaryRain hook with style constants and improved structure

chore: update main entry point for consistent import style

feat: create Home page to encapsulate BinaryRain component

chore: update Vite configuration for consistent import style

--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://EyalShapiro.github.io/binaryCanvasAnimation",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -24,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "prettier": "3.6.2",
     "vite": "^6.0.5"
   }
 }
